# gh2gl

./: .gitignore  README.md  pyproject.toml
gh2gl/: auth.py  cli.py  mirror.py
