[project]
name = "gh2gl"
version = "0.1.0"
description = ""
authors = [
    {name = "viniciusccosta",email = "viniciusccosta95@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "typer (>=0.19.2,<0.20.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "rich (>=13.7.0,<14.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
gh2gl = "gh2gl.cli:app"
